Add: highlight shadow to icon clicks

--- a/static-page/index.html
+++ b/static-page/index.html
@@ -108,37 +108,37 @@
               <h1>
               <a id="user-content-toolbar" class="anchor" href="#toolbar" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Toolbar</h1>
 
-              <h1>
+              <h1 data-focused="false">
               <a id="user-content---" class="anchor" href="#--" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="./img/refresh.png" target="_blank"><img src="./img/refresh.png" alt="" style="max-width:100%;"></a> | <a href="./img/refresh-spin.gif" target="_blank"><img src="./img/refresh-spin.gif" alt="" style="max-width:100%;"></a>
               </h1>
 
-              <p>You can manually refresh the output by clicking this icon.
+              <p data-focused="false">You can manually refresh the output by clicking this icon.
               The icon is spinning, when a document is being rendered.</p>
 
               <h2></h2>
 
-              <h1>
+              <h1 data-focused="false">
               <a id="user-content--1" class="anchor" href="#-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="./img/hashtag.png" target="_blank"><img src="./img/hashtag.png" alt="" style="max-width:100%;"></a>
               </h1>
 
-              <p>Shows the ouput HTML source.</p>
+              <p data-focused="false">Shows the ouput HTML source.</p>
 
               <h2></h2>
 
-              <h1>
+              <h1 data-focused="false">
               <a id="user-content----1" class="anchor" href="#---1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="./img/chain.png" target="_blank"><img src="./img/chain.png" alt="" style="max-width:100%;"></a> | <a href="./img/chain-broken.png" target="_blank"><img src="./img/chain-broken.png" alt="" style="max-width:100%;"></a>
               </h1>
 
-              <p>Disable/Enable watching the content of the input file, auto-refreshing when it changes.
+              <p data-focused="false">Disable/Enable watching the content of the input file, auto-refreshing when it changes.
               Enabled by default, which can be overriden with <code>-w false</code>.</p>
 
               <h2></h2>
 
-              <h1>
+              <h1 data-focused="false">
               <a id="user-content--4" class="anchor" href="#-4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="./img/times.png" target="_blank"><img src="./img/times.png" alt="" style="max-width:100%;"></a>
               </h1>
 
-              <p>Closes the App.</p>
+              <p data-focused="false">Closes the App.</p>
             </content>
           </container>
         </div>
