Meta: update README.md

--- a/static-page/index.html
+++ b/static-page/index.html
@@ -61,7 +61,11 @@
               <h1>
               <a id="user-content-nwjs-markdown-preview" class="anchor" href="#nwjs-markdown-preview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>nwjs-markdown-preview</h1>
 
-              <p><a href="https://foo.bar/">Download latest (foo)</a></p>
+              <h3>
+              <a id="user-content-download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h3>
+
+              <p><a href="https://github.com/rbeer/nwjs-mdp.git">Just GitHub, for now</a></p>
+
 
               <h3>
               <a id="user-content-renders-github-flavored-markdown" class="anchor" href="#renders-github-flavored-markdown" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Renders GitHub Flavored Markdown</h3>
