Fix: re-opening when trying to close raw modal with icon click

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="divider-vertical"></div>
       <i class="fa fa-pull-right fa-chain-broken" onclick="app.toggleFilewatcher();" data-filewatcher></i>
       <div class="divider-vertical"></div>
-      <i class="fa fa-pull-right fa-hashtag" onclick="app.showRawModal();"></i>
+      <i class="fa fa-pull-right fa-hashtag" onclick="app.toggleRawModal();"></i>
       <i class="fa fa-pull-right fa-refresh" onclick="app.render();" data-refresh></i>
     </titlebar>
     <container>
