Change: class filename->title-text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <titlebar>
       <i class="fa fa-pull-left markdown-mark"></i>
-      <div class="fa-pull-left filename">Nothing yet</div>
+      <div class="fa-pull-left title-text" data-filename>Error :/</div>
       <i class="fa fa-pull-right fa-times" onclick="app.close();"></i>
       <div class="divider-vertical"></div>
       <i class="fa fa-pull-right fa-chain-broken" onclick="app.toggleFilewatcher();" data-filewatcher></i>
