--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./styles/animations.css" />
     <link rel="stylesheet" type="text/css" href="./styles/ui.css" />
     <link rel="stylesheet" type="text/css" href="./styles/git-flavored.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/github-element.css" />
     <link rel="stylesheet" type="text/css" href="./lib/font-awesome/css/font-awesome.min.css" />
     <script>
       (() => {
@@ -34,6 +35,7 @@
       <i class="fa fa-pull-right fa-times" onclick="app.close();"></i>
       <div class="divider-vertical"></div>
       <i class="fa fa-pull-right fa-chain-broken" onclick="app.toggleFilewatcher();" data-filewatcher></i>
+      <div class="pull-right github-element" data-github-element></div>
       <div class="divider-vertical"></div>
       <i class="fa fa-pull-right fa-hashtag" onclick="app.toggleRawModal();"></i>
       <i class="fa fa-pull-right fa-refresh" onclick="app.render();" data-refresh></i>
