Add: show message and clear interval, when rate limit timeout is up

--- a/lib/ratelimit-error.html
+++ b/lib/ratelimit-error.html
@@ -4,4 +4,7 @@
   <div data-reset-in>
     <span data-reset-in-h>00</span>:<span data-reset-in-m>00</span>:<span data-reset-in-s>00</span>
   </div>
+  <div class="hidden" data-reset-done>
+    <span>Your timeout is up! You can refresh the .md, now.</span>
+  </div>
 </div>
