--- a/lib/ratelimit-error.html
+++ b/lib/ratelimit-error.html
@@ -9,7 +9,7 @@
       <span data-reset-in-h>00</span>:<span data-reset-in-m>00</span>:<span data-reset-in-s>00</span>
     </div>
     <div class="errctocat-token-hint">
-      <button>Request A Token*</button>
+      <button>Get A Token*</button>
       <span>* Requires GitHub account.</span>
     </div>
   </div>
